# daily-bookkepping

./: .gitignore  AGENTS.md  README.md  codex.md  index.html  package-lock.json  package.json  vite.config.ts  启动桌面版.cmd  启动网页版.cmd  每日记账安装包.msi  生成安装包.cmd
installer/: Product.wxs
src/: App.tsx  AppV2.tsx  api.ts  categoryData.ts  clientApi.ts  data.ts  main.tsx  styles.css  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: categories.rs  main.rs
